--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
 
     // ViewModel & LiveData
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
 
     // Material
     implementation 'com.google.android.material:material:1.2.0'
@@ -51,7 +52,7 @@ dependencies {
     // RecyclerView
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
-    // Scalable Size unit (support for different screen sizes)
+    // Scalable Size unit
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
 
@@ -65,6 +66,7 @@ dependencies {
     // Room Database
     implementation 'androidx.room:room-runtime:2.2.5'
     kapt 'androidx.room:room-compiler:2.2.5'
+    implementation "androidx.room:room-ktx:2.2.5"
     implementation 'androidx.room:room-rxjava2:2.2.5'
 
     // RxJava
